@@ -315,10 +315,11 @@ $(function() {
                 $("#recipientstab").hide().next().hide();
             }
 
-            // TODO: NO! CHECK THE HOSTNAME
             // If there are more than MailMergeMaxEmails results, hide the 
             // email section and replace it with a message explaining why.
-            if (asm.smcom && controller.numrows > asm.smcommaxemails) {
+            // The first clause is for sheltermanager.com only and means that the limit can be lifted
+            // by configuring the use of another SMTP server in sheltermanager.com accounts.
+            if (controller.issmcomsmtp && controller.numrows > controller.smcommaxemails) {
                 $("#sendemail").html( html.error( _("Please tighten the scope of your email campaign to {0} emails or less.").replace("{0}", asm.smcommaxemails) +
                     " " + _("Sending {0} emails is considered abusive and will damage the reputation of the email server.").replace("{0}", controller.numrows) ) );
             }
